--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <head>
 <title>Semangat</title>
+<link rel="icon" type="image/x-icon" href="https://muftimustaqim.github.io/drl/favicon.png">
 </head>
 <body>
 	
