--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 	
    <div id="bodyblur">
-     <!-- Wallpaper / Background --><img src="https://muftimustaqim.github.io/pics/awan/1.jpg" id="wallpaper"/>
+     <!-- Wallpaper / Background --><img src="https://muftimustaqim.github.io/drl/asd.jpg" id="wallpaper"/>
    </div>
   
   <div class="kumpulanstiker">
@@ -62,7 +62,7 @@
        async function jawab(){await swals.fire('Kirim pesan ke WhatsApp aku, ya!');window.location = "https://api.whatsapp.com/send?phone=&text=" + pesanwhatsapp;}
 
        async function pertama(){
-         audio = new Audio('https://muftimustaqim.github.io/almostday.mp3');setTimeout(showDiv,100);
+         audio = new Audio('https://muftimustaqim.github.io/drl/opening.mp3');setTimeout(showDiv,100);
        } pertama();
 
 	  function tunjukkan(){document.getElementById("sticky-ad").style = "bottom: 0px";}
