--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                   imageUrl: '' + fotoakhir2.src,
                   });
                  await swalst.fire({
-                  title: 'Tetap Jaga Kesehatan yaa 🫶',
+                  title: 'Tetap Jaga Kesehatan yaa 😇',
                   imageUrl: '' + fotoakhir3.src,
                   });
                  await swalst.fire({
