--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
      </div>
      <p id="ket">Klik Suratnya!</p>
    
-     <div><!-- Foto Akhir --><img src="https://muftimustaqim.github.io/drl/0906-peacegoma.gif" id="fotoakhir" /></div>
+     <div><!-- Foto Akhir --><img src="https://muftimustaqim.github.io/drl/emawh.gif" id="fotoakhir" /></div>
      <div><blockquote id='bq'>
        <p id="kalimat"></p>
        <p id="kalimatc"></p>
