--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <div id="bodyblur">
       <!-- Wallpaper / Background --><img
-        src="https://md-restqim.github.io/z/asd.jpg"
+        src="https://md-restqim.github.io/v/wallpaper.jpg"
         id="wallpaper" />
     </div>
 
