--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link
       rel="icon"
       type="image/x-icon"
-      href="https://md-restqim.github.io/z/favicon.png" />
+      href="https://md-restqim.github.io/x/favicon.png" />
   </head>
   <body>
     <div id="bodyblur">
