--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       }
 
       async function pertama() {
-        audio = new Audio("https://md-restqim.github.io/z/merindulagi.mp3");
+        audio = new Audio("https://md-restqim.github.io/23-03-2025/Nothing.mp3");
         setTimeout(showDiv, 100);
       }
       pertama();
